# MIECT

./: .gitattributes  .gitignore
1y/1s/Alga/: Readme.md
1y/Labi/1s/Exercicios/: 1.docx
1y/Labi/1s/Proj1/: AP1.aux  AP1.bbl  AP1.blg  AP1.lof  AP1.lot  AP1.out  AP1.tex  AP1.toc  PoluicaoeMeioAmbiente  myBib.bib
1y/Labi/1s/Proj2/: README.md  estilo.css
1y/Labi/1s/Slides/: 5Pontos Importantes G5.docx
1y/Labi/Proj/: acerca.html  index.html  mapRating.js  script.js
1y/Labi/Proj/fonts/: icomoon.eot
2y/2s/AS/Aula01/: Guiao1ex1_2.vpp  Guiao1ex1_2.vpp.bak_003d  Guiao1ex1_3a.vpp  Guiao1ex1_3a.vpp.bak_001d
2y/2s/AS/Aula02/: ex2_2.vpp.bak_000f  guiao2.docx  guiao2_.docx
2y/2s/AS/Aula03/: exc3_2.drawio
2y/2s/AS/Aula04/: 4_1.docx  Resolução Guião Lab 04.docx  ex3.drawio  ex3.vpp.bak_000f  ex3.vpp.bak_001d  ex4_2.drawio  exc4_3.drawio  exc4_3B
2y/2s/AS/MiniProj/: sausces.txt
2y/2s/ICG/Proj/: UAmap.mtl  index.html  package.json  (+2 more)
3y/2s/IHC/: README.md  _config.yml
4y/1s/AC/: .gitattributes  .gitignore  README.md
4y/1s/CM/: README.md
4y/1s/IC/Projs/Lab2/opencv-example-src/: BitStream.hpp  CMakeLists.txt
4y/1s/IC/Projs/Lab2/opencv-example-src/1/: cp_image.cpp
4y/1s/IC/Projs/Lab2/opencv-example-src/2/: imgHorizontal.ppm  imgIntensity.ppm  imgNegative.ppm  imgVertical.ppm  menu.cpp  rotate.hpp  rotateLeft.ppm  rotateRight.ppm
4y/1s/IC/Projs/Lab2/opencv-example-src/3/: Golomb.cpp  Golomb.hpp  testGolomb.cpp
4y/1s/IC/Projs/Lab2/opencv-example-src/4e5/: AudioCodec.cpp  AudioCodec.hpp  compress.txt  testAudioCodec.cpp
4y/1s/IC/Projs/Lab2/opencv-example-src/6/: bike3.txt  bike3_decoded.ppm  decoder.cpp  encoder.cpp
4y/1s/IC/Projs/Lab3/: CMakeLists.txt  Makefile  README.md  ocorrencias.txt
4y/1s/IC/Projs/Lab3/fcm-example-bin/: lang  locatelang  test_fcm  test_findlang  test_lang
4y/1s/IC/Projs/Lab3/fcm-example-src/exemplos/: en.txt  es.txt  fr.txt  it.txt  pt.txt
4y/1s/IC/Projs/Lab3/fcm-example-src/part1/: CircularBuffer.hpp  FiniteContextModel.hpp  circularBuffer.cpp  fcm.cpp  test_fcm.cpp
4y/1s/IC/Projs/Lab3/fcm-example-src/part2/exc2/: Lang.hpp  lang.cpp  test_lang.cpp
4y/1s/IC/Projs/Lab3/fcm-example-src/part2/exc3/: Findlang.hpp  findlang.cpp  test_findlang.cpp
4y/1s/IC/Projs/Lab3/fcm-example-src/textos/: randomFr.txt  randomPt.txt  randomPtFr.txt
5y/1s/SICG/: 02_Cubo_de_dados_exemplo.xlsx
(+689 files in other folders)
